--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                         <a href="k11.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Księga</span> 11 </a>
                                     </li>
                                     <li>
-                                        <a href="k12.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Księga</span> 12 </a>
+                                        <a href="k12.html" class="nav-link px-0"> <span class="d-none d-sm-inline"><i class="bi bi-book"> </i>  Księga</span> 12 </a>
                                     </li>
                                 </ul>
                             </li>
@@ -111,7 +111,7 @@
           </header>
          
             <!-- Obrazek -->
-          <div class="row">
+          <div class="container">
             <div class="container text-center">
             <div class="col d-flex justify-content-end">
                 <img src="mickiewicz.jpg" alt="" style="height: 300px">
