--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                         <a href="k11.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Księga</span> 11 </a>
                                     </li>
                                     <li>
-                                        <a href="k12.html" class="nav-link px-0"> <span class="d-none d-sm-inline"><i class="bi bi-book"> </i>  Księga</span> 12 </a>
+                                        <a href="k12.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Księga</span> 12 </a>
                                     </li>
                                 </ul>
                             </li>
